[project]
name = "hermex"
version = "0.1.0"
description = "A web scraper for LLM chatbot interfaces (ChatGPT, Gemini, etc.)"
authors = [{name = "Usama (PSEUDO)", email = "pseudo.usama@gmail.com"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.0",
    "undetected-chromedriver>=3.5",
    "pyperclip>=1.8",
    "opencv-python>=4.0",
    "platformdirs>=4.0",
]

[project.optional-dependencies]
dev = ["ruff", "mkdocs", "mkdocs-material", "mkdocstrings[python]"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["hermex*"]

[tool.setuptools.package-data]
hermex = ["assets/*.png"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
